--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Circles</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
       html, body { margin: 0; padding: 0; width: 100%; height: 100%; background: #0b0f17; }
       #app { width: 100%; height: 100%; overflow: hidden; }
