--- a/index.html
+++ b/index.html
@@ -3,7 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Circles</title>
+    <script>
+      (() => {
+        const seenBuildKey = 'circles_seen_build_id';
+        fetch('./version.json?t=' + Date.now(), { cache: 'no-store' })
+          .then((resp) => (resp.ok ? resp.json() : null))
+          .then((payload) => {
+            const latestBuildId = String(payload?.buildId || '').trim();
+            if (!latestBuildId) return;
+            let seenBuildId = '';
+            try {
+              seenBuildId = String(localStorage.getItem(seenBuildKey) || '').trim();
+              localStorage.setItem(seenBuildKey, latestBuildId);
+            } catch {}
+            if (!seenBuildId || seenBuildId === latestBuildId) return;
+            const guardKey = `circles_reload_once_${latestBuildId}`;
+            try {
+              if (sessionStorage.getItem(guardKey) === '1') return;
+              sessionStorage.setItem(guardKey, '1');
+            } catch {}
+            const url = new URL(window.location.href);
+            url.searchParams.set('v', latestBuildId.slice(0, 12));
+            window.location.replace(url.toString());
+          })
+          .catch(() => {});
+      })();
+    </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
       html, body { margin: 0; padding: 0; width: 100%; height: 100%; background: #0b0f17; }
